@@ -165,9 +165,9 @@ class FL_EXPORT Fl_Text_Display: public Fl_Group {
     /**    Sets the default size of text in the widget.  */
     void textsize(Fl_Fontsize s) {textsize_ = s;}
     /**    Gets the default color of text in the widget.  */
-    Fl_Color textcolor() const {return (Fl_Color)textcolor_;}
+    Fl_Color textcolor() const {return textcolor_;}
     /**    Sets the default color of text in the widget.  */
-    void textcolor(unsigned n) {textcolor_ = n;}
+    void textcolor(Fl_Color n) {textcolor_ = n;}
 
     int wrapped_column(int row, int column) const;
     int wrapped_row(int row) const;
@@ -327,7 +327,7 @@ class FL_EXPORT Fl_Text_Display: public Fl_Group {
 
     Fl_Font textfont_;
     Fl_Fontsize textsize_;
-    unsigned textcolor_;
+    Fl_Color textcolor_;
 
 	 // The following are not presently used from the original NEdit code,
 	 // but are being put here so that future versions of Fl_Text_Display
